<resources>
    <string name="app_name">Calculator</string>
    <string name="cancel">C</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mult">*</string>
    <string name="divide">/</string>
    <string name="rem">%</string>
    <string name="equal">=</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="sec">sec</string>
    <string name="cosec">cosec</string>
    <string name="cot">cot</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="reciprocal">1/x</string>
    <string name="exp">e^x</string>
    <string name="square">x^2</string>
    <string name="power"></string>
    <string name="factorial">x!</string>
    <string name="pie">π</string>
    <string name="e">e</string>
</resources>
