<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mytheme"
    tools:context="com.example.vrishankgupta.calculator.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:gravity="left">

        <TextView
            android:id="@+id/ope1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="cursive"
        android:gravity="end"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/magenta"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"/>

 <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="76dp"
     android:layout_gravity="center"
     android:textColor="@color/white"
     android:layout_marginBottom="3dp"
     android:gravity="center">


     <Button
         android:id="@+id/sevenButton"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:fontFamily="cursive"
         android:textColor="@color/white"
         android:layout_marginBottom="-3dp"
         android:layout_marginLeft="-20dp"
         android:layout_marginStart="-5dp"
         android:padding="20dp"
         android:text="@string/seven"
         android:textSize="29sp"
/>
    <Button
        android:layout_width="wrap_content"
        android:fontFamily="cursive"
        android:layout_marginLeft="-20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:layout_marginStart="-5dp"
        android:text="@string/eight"
        android:id="@+id/eightButton"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/nineButton"
        android:fontFamily="cursive"
        android:text="@string/nine"
        android:layout_marginBottom="-3dp"
        android:layout_width="wrap_content"
        android:layout_marginLeft="-20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:textColor="@color/white"
        android:textSize="29sp"
        style="?android:attr/borderlessButtonStyle"
        android:padding="20dp"
        android:layout_marginStart="-5dp"
        />
    <Button
        android:id="@+id/divide"
        android:fontFamily="cursive"
        android:text="@string/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:layout_marginLeft="-20dp"
        android:layout_marginBottom="-3dp"
        android:padding="15dp"
        android:layout_marginStart="-5dp"
        style="?android:attr/borderlessButtonStyle"
        />

 </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="76dp"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="3dp"
        android:gravity="center">

    <Button
        android:id="@+id/fourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="-3dp"
        android:fontFamily="cursive"
        android:layout_marginLeft="-20dp"
        android:layout_marginBottom="-3dp"
        android:textSize="29sp"
        android:layout_marginStart="-5dp"
        android:padding="20dp"
        android:text="@string/four"

        style="?android:attr/borderlessButtonStyle"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginLeft="-20dp"
        android:layout_marginTop="-3dp"
        android:layout_marginBottom="-3dp"
        android:padding="20dp"

        android:textSize="29sp"
        android:layout_marginStart="-5dp"
        android:text="@string/five"
        android:id="@+id/fiveButton"
        style="?android:attr/borderlessButtonStyle"

        />

    <Button
        android:id="@+id/sixButton"
        android:text="@string/six"
        android:layout_width="wrap_content"
        android:fontFamily="cursive"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="-20dp"
        android:textSize="29sp"
        android:layout_marginTop="-3dp"
        android:layout_marginBottom="-3dp"
        android:padding="20dp"
        android:layout_marginStart="-5dp"
        android:textColor="@color/white"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/multButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:layout_gravity="center"
        android:textSize="44sp"
        android:layout_marginBottom="-3dp"
        android:layout_marginTop="-3dp"
        android:layout_marginLeft="-20dp"
        android:padding="5dp"
        android:gravity="center"
        android:layout_marginStart="-5dp"
        android:text="@string/mult"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"
        />

    </LinearLayout>




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="76dp"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="1dp"
        android:gravity="center">

    <Button
        android:id="@+id/oneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:layout_gravity="center"
        android:layout_marginLeft="-20dp"
        android:textSize="29sp"
        android:textColor="@color/white"
        android:layout_marginStart="-5dp"
        android:padding="20dp"
        android:text="@string/one"
        style="?android:attr/borderlessButtonStyle"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:layout_marginLeft="-20dp"
        android:layout_marginBottom="-3dp"
        android:layout_marginTop="-3dp"
        android:padding="20dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="29sp"
        android:layout_marginStart="-5dp"
        android:text="@string/two"
        android:id="@+id/twoButton"
        style="?android:attr/borderlessButtonStyle"

        />

    <Button
        android:id="@+id/threeButton"
        android:text="@string/three"
        android:layout_width="wrap_content"
        android:fontFamily="cursive"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-20dp"
        android:textSize="29sp"
        android:layout_marginBottom="-3dp"
        android:layout_marginTop="-3dp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_gravity="center"
        android:layout_marginStart="-5dp"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/subButton"
        android:text="@string/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:layout_marginLeft="-20dp"
        android:textSize="44sp"
        android:layout_marginBottom="-3dp"
        android:layout_marginTop="-3dp"
        android:padding="5dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginStart="-5dp"
        style="?android:attr/borderlessButtonStyle"
        />


</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="3dp"
        android:gravity="center">


    <Button
        android:id="@+id/dotButton"
        android:layout_marginBottom="-3dp"
        android:layout_marginTop="-3dp"
        android:text="@string/dot"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:fontFamily="cursive"
        android:textSize="29sp"
        android:layout_marginLeft="-20dp"
        android:padding="0.1dp"
        android:layout_marginStart="-5dp"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"/>

    <Button

        android:text="@string/zero"
        android:id="@+id/zeroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-20dp"
        android:padding="20dp"
        android:textSize="29sp"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:layout_marginStart="-5dp"
        android:textColor="@color/white"
        android:layout_marginBottom="-3dp"
        android:layout_marginTop="-3dp"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:layout_gravity="center"
        android:layout_marginLeft="-20dp"
        android:textSize="29sp"
        android:layout_marginBottom="-3dp"
        android:layout_marginTop="-3dp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_marginStart="-5dp"
        android:text="@string/cancel"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/addButton"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:fontFamily="cursive"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="-20dp"
        android:textSize="44sp"
        android:padding="5dp"
        android:layout_marginStart="-5dp"
        android:layout_marginBottom="-3dp"
        android:layout_marginTop="-3dp"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/white"

        />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="X!"
            android:id="@+id/fact"
            android:textSize="44sp"
            android:padding="5dp"
            android:layout_gravity="left|top"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:fontFamily="cursive"/>
    <Button
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:fontFamily="cursive"
        android:layout_gravity="center"
        android:layout_height="90dp"
        android:text="@string/equal"
        android:textSize="70sp"
        android:gravity="center"
        android:padding="0dp"
        android:textColor="@color/white"
        style="?android:attr/borderlessButtonStyle"/>
</LinearLayout>



    <Button
        android:id="@+id/square"
        android:text="@string/square"
        android:layout_width="0dp"
        android:layout_marginLeft="-20dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:padding="15dp"
        android:visibility="invisible"
        android:textSize="1sp"
        android:layout_marginStart="-5dp"

        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle" />
    <Button

        android:id="@+id/sin"
        android:text="@string/sin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:layout_marginLeft="-30dp"
        android:layout_marginStart="-6dp"
        style="?android:attr/borderlessButtonStyle"
        android:padding="15dp"
        android:visibility="invisible"
        android:textSize="1sp"
        android:textStyle="bold"

        />


    <Button
        android:id="@+id/cos"
        android:text="@string/cos"
        android:layout_width="0dp"
        android:layout_marginLeft="-20dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:padding="15dp"
        android:textSize="1sp"
        android:layout_marginStart="-5dp"
        android:visibility="invisible"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle" />
    <Button
        android:id="@+id/tan"
        android:text="@string/tan"
        android:layout_width="0dp"
        android:layout_marginLeft="-20dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:padding="15dp"
        android:textSize="1sp"
        android:layout_marginStart="-5dp"
        android:visibility="invisible"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/sec"
        android:text="@string/sec"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:layout_marginLeft="-30dp"
        android:layout_marginStart="-6dp"
        style="?android:attr/borderlessButtonStyle"
        android:padding="15dp"
        android:visibility="invisible"
        android:textSize="1sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/cosec"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:layout_marginLeft="-20dp"
        android:layout_marginStart="-5dp"
        android:padding="15dp"
        android:text="@string/cosec"
        android:visibility="invisible"
        android:textSize="1sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cot"
        android:text="@string/cot"
        android:layout_width="0dp"
        android:layout_marginLeft="-20dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:padding="15dp"
        android:textSize="1sp"
        android:layout_marginStart="-5dp"
        android:visibility="invisible"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle" />


    <Button
        android:id="@+id/ln"
        android:text="@string/ln"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:layout_marginLeft="-30dp"
        android:layout_marginStart="-6dp"
        style="?android:attr/borderlessButtonStyle"
        android:padding="15dp"
        android:visibility="invisible"
        android:textSize="1sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/log"
        android:text="@string/log"
        android:layout_width="0dp"
        android:layout_marginLeft="-20dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:padding="15dp"
        android:textSize="1sp"
        android:layout_marginStart="-5dp"
        android:visibility="invisible"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle" />

    <Button
        android:id="@+id/recip"
        android:text="@string/reciprocal"
        android:layout_width="0dp"
        android:layout_marginLeft="-20dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:padding="15dp"
        android:textSize="1sp"
        android:layout_marginStart="-5dp"
        android:visibility="invisible"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle" />


    <Button
        android:id="@+id/exp"
        android:text="@string/exp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:layout_marginLeft="-30dp"
        android:layout_marginStart="-6dp"
        style="?android:attr/borderlessButtonStyle"
        android:padding="15dp"
        android:visibility="invisible"
        android:textSize="1sp"
        android:textStyle="bold"  />


    <Button
        android:id="@+id/power"
        android:text="@string/power"
        android:layout_width="0dp"
        android:layout_marginLeft="-20dp"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginBottom="-3dp"
        android:padding="15dp"
        android:textSize="1sp"
        android:layout_marginStart="-5dp"
        android:visibility="invisible"
        android:textStyle="bold"
        style="?android:attr/borderlessButtonStyle"/>


</LinearLayout>
